fix iinvisible_woman

--- a/css/main.css
+++ b/css/main.css
@@ -69,9 +69,9 @@ body {
 .val-32 {background: url(/Imagery/THE_HUMAN_TORCH.png); }
 .val-64 {background: url(/Imagery/GAMBIT.png); }
 .val-128 {background: url(/Imagery/STORM.png); }
-.val-256 {background: url(/Imagery/INVISIBLE WOMAN.png); }
+.val-256 {background: url(/Imagery/BEAST.png); }
 .val-512 {background: url(/Imagery/ICEMAN.png); }
 .val-1024 {background: url(/Imagery/MISTER_FANTASTIC.png); }
-.val-2048 {background: url(/Imagery/BEAST.png); }
+.val-2048 {background: url(/Imagery/INVISIBLE_WOMAN.png); }
 .val-4096 {background: url(Imagery/JEAN_GREY.png); }
 .val-8192 {background: url(Imagery/DARK_PHOENIX.png); }
